--- a/config/zones/SV.yaml
+++ b/config/zones/SV.yaml
@@ -14,6 +14,13 @@ capacity:
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 300.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 380.0
   geothermal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -28,6 +35,9 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 580.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 570.0
   solar:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -54,9 +64,6 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 550.0
-    - datetime: '2022-01-01'
-      source: Ember, Yearly electricity data
-      value: 930.0
   wind:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
