--- a/config/zones/UY.yaml
+++ b/config/zones/UY.yaml
@@ -11,6 +11,13 @@ capacity:
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 740.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 750.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 1110.0
   hydro:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -37,16 +44,10 @@ capacity:
   unknown:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
-      value: 830.0
-    - datetime: '2018-01-01'
-      source: Ember, Yearly electricity data
-      value: 1190.0
+      value: 80.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
-      value: 1180.0
-    - datetime: '2022-01-01'
-      source: Ember, Yearly electricity data
-      value: 1150.0
+      value: 70.0
   wind:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
