include consumption forecast parser
build consumption forecast parser
include snapshot test
update snapshot
update config file in CA_ON

--- a/config/zones/CA-ON.yaml
+++ b/config/zones/CA-ON.yaml
@@ -316,6 +316,7 @@ parsers:
   price: CA_ON.fetch_price
   production: CA_ON.fetch_production
   productionCapacity: CA_ON.fetch_production_capacity
+  consumptionForecast: CA_ON.fetch_consumption_forecast
   productionPerModeForecast: CA_ON.fetch_wind_solar_forecasts
 region: Americas
 sources:
