include solar production forecast
create test for fetch_wind_solar_forecasts
upload mocks for wind solar
create snapshot from test
update config for US-MIDW-MISO

--- a/config/zones/US-MIDW-MISO.yaml
+++ b/config/zones/US-MIDW-MISO.yaml
@@ -198,6 +198,7 @@ contributors:
   - systemcatch
   - robertahunt
   - KabelWlan
+  - alejandranavcas
 country: US
 delays:
   consumption: 30
@@ -533,7 +534,7 @@ parsers:
   consumptionForecast: EIA.fetch_consumption_forecast
   production: EIA.fetch_production_mix
   productionCapacity: EIA.fetch_production_capacity
-  productionPerModeForecast: US_MISO.fetch_wind_forecast
+  productionPerModeForecast: US_MISO.fetch_wind_solar_forecasts
 region: Americas
 sources:
   INCER ACV:
