--- a/config/zones/US-CENT-SWPP.yaml
+++ b/config/zones/US-CENT-SWPP.yaml
@@ -470,6 +470,8 @@ parsers:
   production: US_SPP.fetch_production
   productionCapacity: EIA.fetch_production_capacity
   productionPerModeForecast: US_SPP.fetch_wind_solar_forecasts
+  dayaheadPrice: US_SPP.fetch_dayahead_price
+  realtimePrice: US_SPP.fetch_realtime_price
 region: Americas
 sources:
   INCER ACV:
