--- a/web/package.json
+++ b/web/package.json
@@ -64,6 +64,7 @@
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-portal": "^1.1.4",
     "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-toggle": "^1.1.2",
