--- a/config/zones/DK-DK1.yaml
+++ b/config/zones/DK-DK1.yaml
@@ -128,6 +128,9 @@ capacity:
     - datetime: '2022-01-01'
       source: entsoe.eu
       value: 113.0
+    - datetime: '2023-01-01'
+      source: entsoe.eu
+      value: 112.0
   wind:
     - datetime: '2017-01-01'
       source: entsoe.eu
