--- a/config/zones/US-NW-PSEI.yaml
+++ b/config/zones/US-NW-PSEI.yaml
@@ -6,68 +6,50 @@ bounding_box:
 capacity:
   battery storage:
     - datetime: '2023-01-01'
-      source: PSE 2023 IRP
+      source: EIA.gov
       value: 2.0
   biomass:
     - datetime: '2023-01-01'
-      source: PSE 2023 IRP
-      value: 0.0
-    - datetime: '2024-01-01'
       source: EIA.gov
       value: 37.9
   coal:
     - datetime: '2023-01-01'
-      source: PSE 2023 IRP
-      value: 370.0
-    - datetime: '2024-01-01'
       source: EIA.gov
       value: 0.0
   gas:
     - datetime: '2023-01-01'
-      source: PSE 2023 IRP
-      value: 1905.0
-    - datetime: '2024-01-01'
       source: EIA.gov
       value: 1696.0
   geothermal:
     - datetime: '2023-01-01'
-      source: PSE 2023 IRP
+      source: EIA.gov
       value: 0.0
   hydro:
     - datetime: '2023-01-01'
-      source: PSE 2023 IRP
-      value: 966.0
-    - datetime: '2024-01-01'
       source: EIA.gov
       value: 340.5
   hydro storage:
     - datetime: '2023-01-01'
-      source: PSE 2023 IRP
+      source: EIA.gov
       value: 0.0
   nuclear:
     - datetime: '2023-01-01'
-      source: PSE 2023 IRP
+      source: EIA.gov
       value: 0.0
   oil:
     - datetime: '2023-01-01'
-      source: PSE 2023 IRP
+      source: EIA.gov
       value: 0.0
   solar:
     - datetime: '2023-01-01'
-      source: PSE 2023 IRP
-      value: 0.5
-    - datetime: '2024-01-01'
       source: EIA.gov
       value: 15.5
   unknown:
     - datetime: '2023-01-01'
-      source: PSE 2023 IRP
+      source: EIA.gov
       value: 0.0
   wind:
     - datetime: '2023-01-01'
-      source: PSE 2023 IRP
-      value: 773.0
-    - datetime: '2024-01-01'
       source: EIA.gov
       value: 868.4
 comment: Puget Sound Energy
