--- a/config/zones/EE.yaml
+++ b/config/zones/EE.yaml
@@ -81,9 +81,15 @@ capacity:
     - datetime: '2019-01-01'
       source: entsoe.eu
       value: 7.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 8.0
     - datetime: '2022-01-01'
       source: entsoe.eu
       value: 4.0
+    - datetime: '2023-01-01'
+      source: entsoe.eu
+      value: 8.0
   hydro storage:
     - datetime: '2017-01-01'
       source: entsoe.eu
@@ -99,9 +105,15 @@ capacity:
     - datetime: '2019-01-01'
       source: entsoe.eu
       value: 8.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 0.0
     - datetime: '2022-01-01'
       source: entsoe.eu
       value: 52.0
+    - datetime: '2024-01-01'
+      source: entsoe.eu
+      value: 0.0
   solar:
     - datetime: '2017-01-01'
       source: entsoe.eu
