--- a/config/zones/LT.yaml
+++ b/config/zones/LT.yaml
@@ -97,6 +97,9 @@ capacity:
     - datetime: '2024-10-22'
       source: litgrid.eu
       value: 1878.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 1787.0
     - datetime: '2025-02-16'
       source: litgrid.eu
       value: 2408.0
@@ -113,6 +116,9 @@ capacity:
     - datetime: '2020-01-01'
       source: entsoe.eu
       value: 144.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 37.0
   wind:
     - datetime: '2017-01-01'
       source: entsoe.eu
@@ -141,6 +147,9 @@ capacity:
     - datetime: '2024-10-22'
       source: litgrid.eu
       value: 1669.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 1683.0
     - datetime: '2025-02-16'
       source: litgrid.eu
       value: 1832.0
