--- a/config/zones/SK.yaml
+++ b/config/zones/SK.yaml
@@ -14,6 +14,9 @@ capacity:
     - datetime: '2019-01-01'
       source: entsoe.eu
       value: 214.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 224.0
     - datetime: '2021-01-01'
       source: entsoe.eu
       value: 234.0
