--- a/config/zones/US-CAL-IID.yaml
+++ b/config/zones/US-CAL-IID.yaml
@@ -5,63 +5,72 @@ bounding_box:
     - 34.535375
 capacity:
   battery storage:
-    - datetime: '2023-10-01'
+    - datetime: '2023-01-01'
       source: EIA.gov
       value: 30.0
     - datetime: '2024-05-01'
       source: EIA.gov
       value: 180.0
   biomass:
-    - datetime: '2023-10-01'
+    - datetime: '2023-01-01'
       source: EIA.gov
       value: 55.5
+    - datetime: '2024-01-01'
+      source: EIA.gov
+      value: 0.0
   coal:
-    - datetime: '2023-10-01'
+    - datetime: '2023-01-01'
       source: EIA.gov
       value: 0.0
   gas:
-    - datetime: '2023-10-01'
+    - datetime: '2023-01-01'
       source: EIA.gov
       value: 605.5
   geothermal:
-    - datetime: '2023-10-01'
+    - datetime: '2023-01-01'
       source: EIA.gov
       value: 742.7
-    - datetime: '2024-01-01'
+    - datetime: '2023-03-01'
       source: EIA.gov
-      value: 811.7
-    - datetime: '2024-04-01'
+      value: 690.7
+    - datetime: '2023-04-01'
+      source: EIA.gov
+      value: 743.7
+    - datetime: '2023-08-01'
+      source: EIA.gov
+      value: 736.7
+    - datetime: '2023-09-01'
       source: EIA.gov
       value: 752.7
   hydro:
-    - datetime: '2023-10-01'
+    - datetime: '2023-01-01'
       source: EIA.gov
       value: 83.9
   hydro storage:
-    - datetime: '2023-10-01'
+    - datetime: '2023-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2023-10-01'
+    - datetime: '2023-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2023-10-01'
+    - datetime: '2023-01-01'
       source: EIA.gov
       value: 24.9
   solar:
-    - datetime: '2023-10-01'
+    - datetime: '2023-01-01'
       source: EIA.gov
       value: 406.4
     - datetime: '2024-10-01'
       source: EIA.gov
       value: 543.2
   unknown:
-    - datetime: '2023-10-01'
+    - datetime: '2023-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2023-10-01'
+    - datetime: '2023-01-01'
       source: EIA.gov
       value: 0.0
 comment: Imperial Irrigation District
