Update mobile app release workflow (#7167)
* Adds new match approach using certs stored in a bucket

* Updates Fastlane dependency

* Reverts podfile change

* Updates readme on JAVA version

* Updates Android release instructions

* Update mobileapp/README.md

--- a/mobileapp/.gitignore
+++ b/mobileapp/.gitignore
@@ -9,6 +9,7 @@ fastlane/screenshots
 fastlane/metadata
 fastlane/test_output
 fastlane/fastlane-key.json
+gc_keys.json
 
 # ios build files
 Electricity Maps.ipa
